# juan_gonzalez_proyecto1

./: .gitignore  README.md  pyproject.toml
Codigo/: Untitled.ipynb  cdatasocrata.ipynb
Codigo/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Datos/: micuaderno_ETL.ipynb
app/: contratos.py
