[tool.poetry]
name = "juan_gonzalez_proyecto1"
version = "1"
description = ""
authors = ["juangonzalez <juank.gonzalezr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
